--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="container" >
-						<FONT size="pt2"><i>
+						<FONT size="2pt"><i>
 							<p>"We are happy with your quality and excellent work.</p>
 							<p>M.Crawford, USA.</p>
 							<p><br>"Our team could not be more satisfied with your work." </p>
