--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -50,7 +50,8 @@
 											</header>
 											<span class="image featured"><img src="images/pic04.jpg" alt="" /></span>
 											<h3>Right is also not left</h3>
-											<p>Translation</p>
+											<p>As far as I can remember, when watching TV or a movie with my sister, we would always turn on the subtitles because of her hearing issue. Subtitles became important to me, I love translating them and making sure they are perfect.
+It has helped me to understand my purpose and I can work where I’m at my most creative and productive, while preserving precision and attention to detail. My job is to create magic and awaken emotions!</p>
 											<h3>Translation</h3>
 											<p>Translation</p>
 										</article>
