--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -26,7 +26,7 @@
 							<nav id="nav">
 								<ul>
 									<li><a class="icon solid fa-home" href="index.html"><span>Home</span></a></li>
-									<li><a class="icon solid fa-retweet" href="right-sidebar.html"><span>Right Sidebar</span></a></li>
+									<li><a class="icon solid fa-retweet" href="right-sidebar.html"><span>Journal</span></a></li>
 								</ul>
 							</nav>
 
