--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Right Sidebar - Strongly Typed by HTML5 UP</title>
+		<title>Alptra</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -49,8 +49,7 @@
 											</header>
 											<span class="image featured"><img src="images/pic04.jpg" alt="" /></span>
 											<h3>Right is also not left</h3>
-											<p>As far as I can remember, when watching TV or a movie with my sister, we would always turn on the subtitles because of her hearing issue. Subtitles became important to me, I love translating them and making sure they are perfect.
-											It has helped me to understand my purpose and I can work where I’m at my most creative and productive, while preserving precision and attention to detail. My job is to create magic and awaken emotions!</p>
+											<p></p>
 											<h3>Translation</h3>
 											<p>Translation</p>
 										</article>
