--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
 											</header>
 											<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 											<h3>I mean isn't it possible?</h3>
-											<p>I am able to work with creativity and attention to detail.</p>
+											<p>As far as I can remember, when watching TV or a movie with my sister, we would always turn on the subtitles because of her hearing issue. Subtitles became important to me, I love translating them and making sure they are perfect.
+											It has helped me to understand my purpose and I can work where I’m at my most creative and productive, while preserving precision and attention to detail. My job is to create magic and awaken emotions!</p>
 											<ul class="actions">
 												<li><a href="#" class="button icon solid fa-file">Continue Reading</a></li>
 											</ul>
