--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 					<div class="container" >
 						<FONT size="2pt"><i>
 							<p>"We are happy with your quality and excellent work.</p>
-							<p>M.Crawford, USA.</p>
+							<p>M.Crawford, Washington.</p>
 							<p><br>"Our team could not be more satisfied with your work." </p>
-							<p>S. Green, USA.</p>
+							<p>S. Green, Los Angeles.</p>
 							<p><br>"My team were very impressed."</p>
 							<p>K. Smith, London.</p>
 						</i></FONT>
