--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 											<header>
 												<h2><a href="#">By the way, we are located in the French Alps, between France, Italy and Switzerland.</a></h2>
 											</header>
-											<a href="#" class="image featured"><img src="images/pic05.jpg" alt="alps"/></a>
+											<a href="#" class="image featured"><img src="images/pic05.jpg" alt="alps" width="50%"/></a>
 											<h3>My clients include individuals, businesses, broadcasting & media production companies.</h3>
 											<p></p>
 											<ul class="actions">
