--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 																<h3><a href="#">Something of note</a></h3>
 															</header>
 															<a href="#" class="image left"><img src="images/pic06.jpg" alt="" /></a>
-															<p>Voice over. Ready to record your production in English or in French.</p>
+															<p>Ready to record your production in English or in French voice over.</p>
 															<ul class="actions">
 																<li><a href="#" class="button icon solid fa-file">Learn More</a></li>
 															</ul>
@@ -168,7 +168,7 @@
 																<h3><a href="#">Something of less note</a></h3>
 															</header>
 															<a href="#" class="image left"><img src="images/pic07.jpg" alt=""/></a>
-															<p>Transcription. Get your audio and video files transcribed, whether it's a podcast, lecture, or meeting, in French.</p>
+															<p>Get your audio and video files transcribed, whether it's a podcast, lecture, or meeting, in French.</p>
 															<ul class="actions">
 																<li><a href="#" class="button icon solid fa-file">Learn More</a></li>
 															</ul>
