--- a/index.html
+++ b/index.html
@@ -231,6 +231,8 @@
 											<ul class="icons">
 												<li class="icon brands fa-facebook-f">
 													<a href="#">facebook.com/untitled</a>
+<script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>
+<script type="IN/Share" data-url="HTTPS://www.linkedin.com/in/alptra"></script>
 												</li>
 											</ul>
 										</div>
