--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -165,7 +165,9 @@
 										<div class="col-6 col-12-small">
 											<ul class="icons">
 												<li class="icon brands fa-facebook-f">
-													<a href="#">facebook.com/untitled</a>
+													<a href="#"></a>
+<script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>
+<script type="IN/Share" data-url="https://www.linkedin.com"></script>
 												</li>
 											</ul>
 										</div>
