--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<section id="header">
 					<div class="container">
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">ALPTRA</a></h1>
+							<h1 id="logo"><a href="index.html">Alptra</a></h1>
 							<p class="lowercase">Translating more than words</p>
 
 						<!-- Nav -->
