--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -175,7 +175,7 @@
 					</div>
 					<div id="copyright" class="container">
 						<ul class="links">
-							<li>&copy; Untitled. All rights reserved.</li>
+							<li>&copy; Alptra. All rights reserved.</li>
 						</ul>
 					</div>
 				</section>
