--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 													<!-- Highlight -->
 														<article class="box highlight">
 															<header>
-																<h3><a href="#">Something of note</a></h3>
+																<h3><a href="#">Voice over</a></h3>
 															</header>
 															<a href="#" class="image left"><img src="images/pic06.jpg" alt="" /></a>
 															<p>Ready to record your production in English or in French voice over.</p>
@@ -162,7 +162,7 @@
 													<!-- Highlight -->
 														<article class="box highlight">
 															<header>
-																<h3><a href="#">Something of note</a></h3>
+																<h3><a href="#">Transcription</a></h3>
 															</header>
 															<a href="#" class="image left"><img src="images/pic07.jpg" alt=""/></a>
 															<p>Get your audio and video files in French transcribed, whether it's a podcast, lecture, or meeting.</p>
