--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 																<h3><a href="#">Voice over</a></h3>
 															</header>
 															<a href="#" class="image left"><img src="images/pic06.jpg" alt="" /></a>
-															<p>Ready to record your production in English or in French voice over.</p>
+															<p>Ready to record your production in French and in English.</p>
 														</article>
 
 												</li>
