--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 												</a></h2>
 											</header>
 											<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-											<h3>I mean isn't it possible?</h3>
+											<h3>I mean isn't it possible? Alptra offers a variety of options for broadcast, home entertainment and streaming release.</h3>
 											<p>As far as I can remember, when watching TV or a movie with my sister, we would always turn on the subtitles because of her hearing issue. Subtitles became important to me, I love translating them and making sure they are perfect.
 											It has helped me to understand my purpose and I can work where I’m at my most creative and productive, while preserving precision and attention to detail. My job is to create magic and awaken emotions!</p>
 											<ul class="actions">
