--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a class="icon solid" href="index.html"><span>Home</span></a></li>
-									<li><a class="icon solid" href="right-sidebar.html"><span>Journal</span></a></li>
+									<li><a class="icon solid fa-home" href="index.html"><span>Home</span></a></li>
+									<li><a class="icon solid fa-retweet" href="right-sidebar.html"><span>Journal</span></a></li>
 								</ul>
 							</nav>
 
