--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 								<div id="content" class="col-8 col-12-medium">
 
 									<!-- Post -->
-										<article class="box post"> ==$0
+										<article class="box post">
 											<header>
 												<h2><a href="#">By the way, we are located in the French Alps, between France, Italy and Switzerland.</a></h2>
 											</header>
