--- a/index.html
+++ b/index.html
@@ -114,9 +114,10 @@
 											<header>
 												<h2><a href="#"><strong>Audiovisual translation</strong><br />
 												</a></h2>
+												<h3>Alptra offers a variety of options for broadcast, home entertainment and streaming release.</h3>
 											</header>
 											<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-											<h3>Alptra offers a variety of options for broadcast, home entertainment and streaming release.</h3>
+											<p><strong>My inspiration></strong>
 											<p>As far as I can remember, when watching TV or a movie with my sister, we would always turn on the subtitles because of her hearing issue. Subtitles became important to me, I love translating them and making sure they are perfect.
 											It has helped me to understand my purpose and I can work where I’m at my most creative and productive, while preserving precision and attention to detail. My job is to create magic and awaken emotions!</p>
 										</article>
@@ -161,12 +162,12 @@
 
 									<!-- Post -->
 										<article class="box post">
-											<h3>I mean isn't it possible?</h3>
+											<h3></h3>
 										</article>
 									<!-- Post -->
 										<article class="box post">
 											<header>
-												<h2><a href="#">By the way, we are located in the French Alps, between France, Italy and Switzerland.</a></h2>
+												<h2><a href="#">We are located in the French Alps, between France, Italy and Switzerland.</a></h2>
 											</header>
 											<a href="#" class="image featured"><img src="images/pic05.jpg" alt="alps"/></a>
 											<h3>Our clients include individuals, businesses, broadcasting & media production companies.</h3>
