--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 												<h3>Alptra offers a variety of options for broadcast, home entertainment and streaming release.</h3>
 											</header>
 											<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-											<p><strong>My inspiration></strong>
+											<p><strong>My inspiration</strong>
 											<p>As far as I can remember, when watching TV or a movie with my sister, we would always turn on the subtitles because of her hearing issue. Subtitles became important to me, I love translating them and making sure they are perfect.
 											It has helped me to understand my purpose and I can work where I’m at my most creative and productive, while preserving precision and attention to detail. My job is to create magic and awaken emotions!</p>
 										</article>
