--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -140,7 +140,8 @@
 												<textarea name="message" placeholder="Message"></textarea>
 											</div>
 											<div class="col-12">
-												<a title="Email" a href="#" data-email_b64="dG9ueUBhbHB0cmFuc2xhdGlvbmxhYi5jb20=" class="form-button-submit button icon solid fa-envelope">egasseM dneS</a>
+												<a title="Email" a href="#" data-email_b64="dG9ueUBhbHB0cmFuc2xhdGlvbmxhYi5jb20=">
+<class="form-button-submit button icon solid fa-envelope">Send Message</a>
 											</div>
 										</div>
 									</form>
