--- a/Legal-Notice.html
+++ b/Legal-Notice.html
@@ -76,12 +76,14 @@
 											<header>
 												<h2><FONT COLOR="#1d1d1f">Hosting providers</FONT></h2>
 											</header>
-											<h3></h3>
+											<h3>Hosting</h3>
 											<p>GitHub Pages, a service of GitHub, Inc
 											<br>88 Colin P Kelly Jr St, San Francisco, CA 94107, United States
 											<br>+1 877 448-4820</p>
-											<h3></h3>
-											<p></p>
+											<h3>Intellectual Property</h3>
+											<p>Except for explicitly licensed elements, all information on this web site is protected by the copyrights held by Alptra.
+											Therefore, the information may not be reproduced, modified, republished, re-aired, translated, distributed or reused in any manner, without the written consent of Alptra.
+											Alptra’s title, concept and form, as well as its content, contained on the Alptra site are the property of Alptra.</p>
 											<h3></h3>
 											<p></p>
 											<h3></h3>
