--- a/Legal-Notice.html
+++ b/Legal-Notice.html
@@ -74,9 +74,8 @@
 											<br>VAT NUMBER
 											<br>SOLE PROPRIETORSHIP - ENTREPRISE INDIVIDUELLE</p>
 											<header>
-												<h2><FONT COLOR="#1d1d1f">Hosting providers</FONT></h2>
+												<h2><FONT COLOR="#1d1d1f">Hosting provider</FONT></h2>
 											</header>
-											<h3>Hosting</h3>
 											<p>GitHub Pages, a service of GitHub, Inc
 											<br>88 Colin P Kelly Jr St, San Francisco, CA 94107, United States
 											<br>+1 877 448-4820</p>
